[package]
name = "hiven-rs"
version = "0.1.0"
authors = ["Daniel Conley <danielc030417@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Daniihh/hiven-rs"
license = "MIT"
keywords = ["hiven", "api", "gateway"]
categories = ["api-bindings"]

[dependencies]
async-tungstenite = {version = "0.8.0", features = ["tokio-runtime", "tokio-native-tls"]}
futures = "0.3"
reqwest = "0.10.7"
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.57"
serde-value = "0.7.0"
tokio = {version = "0.2", features = ["full"]}
